@@ -1,80 +1,53 @@
 <?xml version="1.0"?>
 <dc-workflow xmlns:i18n="http://xml.zope.org/namespaces/i18n"
              i18n:domain="plone"
-             workflow_id="comment_review_workflow"
-             title="Comment Review Workflow"
-             description="A simple workflow for comments"
+             workflow_id="one_state_workflow"
+             title="Single State Workflow"
+             description="- Essentially a workflow with no transitions, but has a Published state, so portlets and applications that expect that state will continue to work."
              state_variable="review_state"
-             initial_state="pending"
+             initial_state="published"
              i18n:attributes="title; description">
 
  <permission>Access contents information</permission>
+ <permission>Change portal events</permission>
+ <permission>List folder contents</permission>
  <permission>Modify portal content</permission>
  <permission>View</permission>
- <permission>Reply to item</permission>
-
- <state state_id="pending" title="Pending" i18n:attributes="title">
-  <exit-transition transition_id="publish"/>
-  <description i18n:translate="">
-    Submitted, pending review.
-  </description>
-  <permission-map name="Access contents information" acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reviewer</permission-role>
-  </permission-map>
-  <permission-map name="Modify portal content" acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reviewer</permission-role>
-  </permission-map>
-  <permission-map name="View" acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reviewer</permission-role>
-  </permission-map>
-  <permission-map name="Reply to item" acquired="False">
-  </permission-map>
- </state>
 
  <state state_id="published" title="Published" i18n:attributes="title">
   <description i18n:translate="">
-    Visible to everyone, non-editable.
+    Visible to everyone, editable by the owner.
   </description>
-  <permission-map name="Access contents information" acquired="False">
+  <permission-map name="Access contents information"
+                  acquired="False">
    <permission-role>Anonymous</permission-role>
   </permission-map>
-  <permission-map name="Modify portal content" acquired="False">
+  <permission-map name="Change portal events"
+                  acquired="False">
    <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Editor</permission-role>
+  </permission-map>
+  <permission-map name="List folder contents"
+                  acquired="False">
+   <permission-role>Anonymous</permission-role>
+  </permission-map>
+  <permission-map name="Modify portal content"
+                  acquired="False">
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+   <permission-role>Editor</permission-role>
   </permission-map>
   <permission-map name="View" acquired="False">
    <permission-role>Anonymous</permission-role>
   </permission-map>
-  <permission-map name="Reply to item" acquired="True">
-  </permission-map>
  </state>
-
- <transition transition_id="publish" new_state="published"
-             title="Reviewer publishes content"
-             trigger="USER"
-             before_script="" after_script=""
-             i18n:attributes="title">
-  <description i18n:translate="">
-    Publishing the comment makes it visible to other users.
-  </description>
-  <action url="%(content_url)s/content_status_modify?workflow_action=publish"
-          category="workflow"
-          i18n:translate="">Publish</action>
-  <guard>
-   <guard-permission>Review comments</guard-permission>
-  </guard>
- </transition>
 
  <variable variable_id="action"         for_catalog="False"
            for_status="True" update_always="True">
   <description i18n:translate="">Previous transition</description>
   <default>
-
+   
    <expression>transition/getId|nothing</expression>
   </default>
   <guard>
@@ -86,8 +59,8 @@
     The ID of the user who performed the previous transition
   </description>
   <default>
-
-   <expression>user/getUserName</expression>
+   
+   <expression>user/getId</expression>
   </default>
   <guard>
   </guard>
@@ -98,7 +71,7 @@
     Comment about the last transition
   </description>
   <default>
-
+   
    <expression>python:state_change.kwargs.get('comment', '')</expression>
   </default>
   <guard>
@@ -110,7 +83,7 @@
     Provides access to workflow history
   </description>
   <default>
-
+   
    <expression>state_change/getHistory</expression>
   </default>
   <guard>
@@ -124,7 +97,7 @@
     When the previous transition was performed
   </description>
   <default>
-
+   
    <expression>state_change/getDateTime</expression>
   </default>
   <guard>
